--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
         "vue": "^2.1.10"
+    },
+    "dependencies": {
+        "apollo-client": "^1.9.3",
+        "vue-apollo": "^2.1.0-rc.5"
     }
 }
